[project]
name = "sae"
version = "0.1.0"
description = "SAE!"
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.5.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "banal==1.0.6",
    "beartype==0.14.1",
    "better-abc==0.0.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "dataset==1.6.2",
    "datasets==3.5.0",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "einops==0.8.1",
    "fancy-einsum==0.0.3",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "huggingface-hub==0.30.1",
    "idna==3.10",
    "jaxtyping==0.3.0",
    "Jinja2==3.1.6",
    "Mako==1.3.9",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pip==24.2",
    "platformdirs==4.3.7",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pydantic==2.11.1",
    "pydantic_core==2.33.0",
    "Pygments==2.19.1",
    "pyproject-freeze==0.1.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "safetensors==0.5.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.25.0",
    "setproctitle==1.3.5",
    "setuptools==78.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "SQLAlchemy==1.4.54",
    "sympy==1.13.1",
    "tokenizers==0.21.1",
    "tomlkit==0.13.2",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformer-lens==2.15.0",
    "transformers-stream-generator==0.0.5",
    "transformers==4.50.3",
    "typeguard==4.4.2",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "wadler_lindig==0.1.4",
    "wandb==0.19.8",
    "xxhash==3.5.0",
    "yarl==1.18.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
